Correct LinkedIn url on CV

--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -14,7 +14,7 @@ const pageTitle = 'Curriculum Vitae';
 		<p>
 			<a href="mailto:alexander.debiasio@gmail.com">alexander.debiasio@gmail.com</a> |
 			(201) 881-9814 |
-			<a href="https://linkedin.com/in/alexdebiasio" target="_blank">linkedin.com/in/alexdebiasio</a> |
+			<a href="https://www.linkedin.com/in/alex-d-32337a183/" target="_blank">linkedin.com/in/alex-d-32337a183</a> |
 			Hillsdale, NJ
 		</p>
 		<a href="/files/Alex_De_Biasio_CV.pdf" class="download-link" download>Download PDF Version</a>
