--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,8 +21,7 @@ const pageTitle = "Home";
 	<div class="starting-points">
 		<h2>Starting Points</h2>
 		<ul>
-			<li>Explore my <a href="/blog">essays and notes</a>.</li>
-			<li>View my professional background on my <a href="/cv">CV</a>.</li>
+			<li>View my <a href="/cv">CV</a>.</li>
 			<li>See a selection of my <a href="/projects">projects</a>.</li>
 		</ul>
 	</div>
